# BitOS

./: LICENSE  README.md  run.sh
kernel/: .gitignore  Cargo.toml  Makefile  events
kernel/.cargo/: config
kernel/src/: boot.rs  config.rs  console.rs  kernel.ld  main.rs  register.rs  shutdown.rs  timer.rs
kernel/src/arch/riscv/: mod.rs  register.rs
kernel/src/arch/riscv/qemu/: layout.rs
kernel/src/asm/: entry.S  kernelvec.S  link_fs.S  link_kernel_app.S  switch.S  trampoline.S
kernel/src/driver/: mod.rs  pci.rs  plic.rs  uart.rs  virtio.rs  virtio_blk.rs  virtio_block.rs
kernel/src/driver/blk/: mem_block.rs  mod.rs  virtio_block.rs
kernel/src/driver/net/: e1000.rs  mod.rs
kernel/src/fs/: inode.rs  mod.rs  stdio.rs
kernel/src/ipc/: mod.rs  pipe.rs
kernel/src/mem/: address.rs  allocator.rs  app.rs  heap.rs  kernel.rs  kernel_stack.rs  memory_set.rs  mod.rs  page_table.rs
kernel/src/proc/: context.rs  loader.rs  mod.rs  pcb.rs  pid.rs  scheduler.rs
kernel/src/sync/: cell.rs  cond.rs  mod.rs  mutex.rs
kernel/src/syscall/: fs.rs  ipc.rs  mod.rs  proc.rs  sync.rs  task.rs  time.rs
kernel/src/task/: context.rs  mod.rs  scheduler.rs  tcb.rs  tid.rs
kernel/src/task/manager/: fifo.rs  mod.rs  stride.rs
kernel/src/trap/: context.rs  mod.rs
simple-fs/: Cargo.toml
simple-fs-test/: .gitignore  Cargo.toml  Makefile
simple-fs-test/src/: main.rs
simple-fs/src/: bitmap.rs  block_cache.rs  block_device.rs  inode.rs  layout.rs  lib.rs  simple_fs.rs  super_block.rs  vfs.rs
user_lib/: Cargo.toml  Makefile
user_lib/.cargo/: config
(+10 files in other folders)
