[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
spin = "0.7.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
bitflags = "1.3.2"
elf = {git="https://github.com/cole14/rust-elf/", default-features = false}
virtio-drivers = "0.4.0"
simplefs = {path = "../simple-fs"}